--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,38 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  # Network:
+  dio: ^4.0.6
+
+   #local store
+  flutter_secure_storage: ^6.0.0
+
+  #freezed
+  freezed: ^2.1.0+1
+  freezed_annotation: ^2.1.0
+
+  formz: ^0.4.1
+
+  # bloc:
+  flutter_bloc: ^8.1.1
+
+  #DI
+  injectable: ^1.5.3
+  get_it: ^7.2.0
+
+  #Json
+  equatable: ^2.0.5
+
+  #internet checker
+  internet_connection_checker: ^0.0.1+4
+
+ #RX
+  rxdart: ^0.27.5
+
+  fluent_validation:
+    git: https://github.com/AhmedAboughosen/stream_fluent_validation.git
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +77,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  injectable_generator: ^1.5.4
+  build_runner: ^2.2.0
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
